syntax = 'proto3';

package rpc;

import 'funds.proto';

service RpcService {
  rpc FundCategoryHandler(FundCategoryRequest) returns (FundCategoryResponse);
}